--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Градусник",
-  "short_name": "Темп",
+  "name": "Р“СЂР°РґСѓСЃРЅРёРє",
+  "short_name": "РўРµРјРї",
   "start_url": "index.html",
   "display": "standalone",
   "background_color": "#ffffff",
